# Appras_Bearcar_24

./: .gitattributes  .gitmodules  README.md
bearcar/bearcar_bringup/: CMakeLists.txt  package.xml
bearcar/bearcar_bringup/launch/: bearcar.launch.py
bearcar/bearcar_description/: CMakeLists.txt  package.xml
bearcar/bearcar_description/rviz/: bearcar.rviz
bearcar/bearcar_description/urdf/: bearcar.urdf.xacro  bearcar_core.xacro  bearcar_d455.xacro  bearcar_lidar.xacro  bearcar_properties.xacro  bearcar_t265.xacro  gazebo_control.xacro  ros2_control.xacro
bearcar/bearcar_description/urdf (copy)/: bearcar.urdf.xacro  bearcar_core.xacro  bearcar_core_max.xacro  bearcar_d455.xacro  bearcar_lidar.xacro  bearcar_lidar_max.xacro  bearcar_t265.xacro
bearcar/models/blender/: first.blend  second.blend  second.blend1  untitled.blend  untitled.blend1
bearcar/models/intel_realsense_t265/grabcad_yes/: Intel RealSense T265.step
bearcar/models/intel_realsense_t265/grabcad_yes/obj file/: t265.mtl
bearcar/models/intel_realsense_t265/grabcad_yes/stl file/: t265.stl
bearcar/models/nvidia_jetson_agx_xavier/grabcad_yes/: nvidia_jetson_agx_xavier.stp
bearcar/models/nvidia_jetson_agx_xavier/grabcad_yes/stl/: nvidia_jetson_agx_xavier.stl
bearcar/models/rplidar/grabcad_yes/: Intel Realsense RPLIDAR A2.SLDPRT
bearcar/models/rplidar/grabcad_yes/gltf/: 1562953.mtl  1562953.omi
keypoints_visualizer/: package.xml  setup.cfg  setup.py
keypoints_visualizer/keypoints_visualizer/: keypoint_visualizer_old.py  keypoint_visualizer_old2.py
